<resources>
    <string name="app_name">Challenge 2</string>
    <string name="hi">Hi,</string>
    <string name="user">Wildan</string>
    <string name="balance">Your Balance in IDR</string>
    <string name="money">500.000</string>
    <string name="give_tip">Give Tip</string>
    <string name="outcome">Rp250.000</string>
    <string name="total_tip">Total Tip</string>
    <string name="recently">Recently Transaction</string>
    <string name="to_user">Talitha</string>
    <string name="date">Sep 30, 2023</string>
    <string name="message">Thanks for the service</string>
    <string name="tip_value">25.000</string>
    <string name="ts_system">-</string>
    <string name="tip">Tip</string>
    <string name="my_card">My Card</string>
    <string name="card_number">4873 4983 4837 1234</string>
    <string name="full_name">Wildan Fatahillah Akbar</string>
    <string name="login_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_hint">Register</string>
    <string name="back_login">Kembali ke Login</string>
    <string name="email">Email</string>
    <string name="havent_account">Didn\'t have account?</string>
    <string name="have_account">Already have account?</string>
    <string name="register">Register</string>
    <string name="name_full">Full Name</string>
    <string name="hint_search">Search</string>
    <string name="list_user">List User</string>
    <string name="description">Kebut semalam gara-gara file ilang :)</string>
    <string name="talitha">Talitha Alda Z</string>
    <string name="number_reg">140451402214069</string>
    <string name="nominal">Nominal</string>
    <string name="amazing">Amazing (20%</string>
    <string name="good">Good (15%)</string>
    <string name="ok">Ok (10%)</string>
    <string name="send">Send</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="see_all">See all</string>
    <string name="dalam_rupiah">Dalam rupiah</string>
    <string name="tip_result">Tip: %s\nTotal Amount: %s</string>
    <string name="total_sum">Total Amount</string>
</resources>