<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GiveTipActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/light_black"
            app:title="@string/talitha"
            app:titleCentered="true"
            app:titleTextColor="@color/light_black"
            app:subtitle="@string/number_reg"
            app:subtitleCentered="true"
            app:subtitleTextColor="@color/dark_gray"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_nominal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        android:text="@string/nominal"
        android:textSize="24sp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/light_black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nominal" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_value_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:hint="@string/money"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_gray"
            android:textSize="32sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edt_value"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/give_tip"
        android:textSize="24sp"
        android:fontFamily="@font/urbanist_medium"
        android:textColor="@color/light_black" />

    <RadioGroup
        android:id="@+id/rg_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_radio">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/rg_option"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_black"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/total_tip"
                android:textSize="24sp"
                android:fontFamily="@font/urbanist_medium"
                android:textColor="@color/white_bg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tip_value"
                android:textSize="32sp"
                android:fontFamily="@font/urbanist_semibold"
                android:textColor="@color/white_bg" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="@string/send"
        android:textSize="24sp"
        android:fontFamily="@font/urbanist_medium"
        android:textColor="@color/white_bg" />


</androidx.constraintlayout.widget.ConstraintLayout>