<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="@color/white_bg">

    <LinearLayout
        android:id="@+id/user_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hi"
            android:textSize="24sp"
            android:fontFamily="@font/urbanist_medium"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/light_black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user"
            android:textSize="24sp"
            android:fontFamily="@font/urbanist_bold"
            android:textColor="@color/light_black" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/balance"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_top" />

    <TextView
        android:id="@+id/tv_balance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/money"
        android:textColor="@color/light_black"
        android:textSize="32sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_balance" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_balance_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_1"
            android:padding="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_card"
                android:fontFamily="@font/urbanist_light"
                android:textColor="@color/white"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/card_number"
                android:fontFamily="@font/urbanist_semibold"
                android:textColor="@color/white"
                android:textSize="24sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/full_name"
                android:fontFamily="@font/urbanist_regular"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_category"
            tools:itemCount="7"
            app:spanCount="4"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_recently"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_kategori"
        android:layout_marginTop="16dp"
        android:text="@string/recently"
        android:fontFamily="@font/urbanist_semibold"
        android:textColor="@color/light_black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/urbanist_light"
        android:text="@string/see_all"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_kategori" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recently"
        tools:listitem="@layout/item_transaction"
        tools:itemCount="5"/>

</androidx.constraintlayout.widget.ConstraintLayout>