<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/light_black"
            app:title="@string/give_tip"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="@color/light_black" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchBar
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_search"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <TextView
        android:id="@+id/tv_list_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_user"
        android:textSize="24sp"
        android:fontFamily="@font/urbanist_semibold"
        android:textColor="@color/light_black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_list_user"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        tools:listitem="@layout/item_contact"/>

</androidx.constraintlayout.widget.ConstraintLayout>